# agentarena

./: .env.example  .gitignore  CONTEXT.md  README.md  package.json  pyproject.toml  turbo.json
apps/dashboard/: index.html  package.json  tsconfig.json
apps/dashboard/src/: App.tsx  api.ts  hooks.ts  index.css  main.tsx
apps/dashboard/src/components/: Composer.tsx  TransferPopup.tsx  bits.tsx  plates.tsx  receipts.tsx
apps/dashboard/src/views/: BlocksView.tsx  NetworkView.tsx  RoundView.tsx
docs/: ROADMAP.md
docs/adr/: 0001-vrais-llm-mistral-au-runtime.md  0002-vrais-process-localhost.md  0003-monorepo-turborepo-bun-uv.md  0004-sanctions-noyau-calibre-sans-honesty-probe.md
