[project]
name = "agentarena"
version = "0.1.0"
description = "Workspace racine du monorepo AgentArena"
requires-python = ">=3.12"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.9"]

[tool.ruff]
line-length = 100
src = ["packages/*/src"]

[tool.pytest.ini_options]
addopts = "-q"
